--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
             </div>
         </main>
         <!-- Chapter 2 -->
-        <div class="description">
+        <section class="description">
             <div class="container">
                 <div class="description__text">
                     <h2>Найт-Сити изменит тебя навсегда!</h2>
@@ -90,7 +90,7 @@
                     <img class="description__img-3-320" src="img/320px/city-3.png">
                 </div>
             </div>
-        </div>
+        </section>
         <!-- Chapter 3 -->
         <div class="border-1"><img src="img/1920px/border-1.png" alt=""></div>
         <div class="border-1-320"><img src="img/320px/border-1.png" alt=""></div>
@@ -147,7 +147,7 @@
         <div class="border-1"><img src="img/1920px/border-2.png" alt=""></div>
         <div class="border-1-320"><img src="img/320px/border-2.png" alt=""></div>
         <!-- Chapter 4 -->
-        <div class="hp">
+        <section class="hp">
             <div class="container">
                 <div class="hp__block">
                     <div class="hp__img-block">
@@ -182,9 +182,9 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </section>
         <!-- Chapter 5  -->
-        <div class="buy" id="chapter_5">
+        <section class="buy" id="chapter_5">
             <div class="buy__img">
                 <img class="buy__img-1920" src="img/1920px/computer_disks.jpg" alt="">
                 <img class="buy__img-1024" src="img/1024px/computer_disks.jpg" alt="">
@@ -236,7 +236,7 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </section>
         <!-- Footer -->
         <footer class="footer">
             <div class="footer__top">
